--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -20,7 +20,7 @@ jobs:
 
       - name: is not pr
         if: github.event_name != 'pull_request'
-        run: echo "BRANCH_NAME=${{ github.event.inputs.branch }}" >> $GITHUB_ENVg
+        run: echo "BRANCH_NAME=${{ github.event.inputs.branch }}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
