--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -22,6 +22,10 @@ jobs:
         if: github.event_name != 'pull_request'
         run: echo "BRANCH_NAME=${{ github.event.inputs.branch }}" >> $GITHUB_ENV
 
+      - name: temp
+        run: echo "BRANCH_NAME=main" >> $GITHUB_ENV
+
+
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
@@ -158,6 +162,9 @@ jobs:
       KEY_PASS: test@cake_wallet
       PR_NUMBER: 1234
     steps:
+
+      - name: temp
+        run: echo "BRANCH_NAME=main" >> $GITHUB_ENV
       - name: Flutter action
         uses: subosito/flutter-action@v1
         with:
