--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -214,3 +214,5 @@ jobs:
       - name: Setup tmate session
         if: ${{ failure() }}
         uses: mxschmitt/action-tmate@v3
+        with:
+          limit-access-to-actor: false
